fix search btn dark mode

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -138,7 +138,7 @@
   }
 }
 
-.searchButton {
+.searchbtn {
   line-height: 1.5;
   font-size: 1.5rem;
   width: 10rem;
@@ -146,9 +146,14 @@
   background-color: hsl(43deg 100% 63%);
   font-weight: 500;
 }
+@media (prefers-color-scheme: dark) {
+  .searchbtn {
+    background-color: hsl(43deg 100% 37%);
+  }
+}
 
 @media (max-width: 600px) {
-  .searchButton {
+  .searchbtn {
     margin-top: 1rem;
   }
 }
